--- a/templates/99_openshift-cluster-api_infra-machineset-TEMPLATE-vmw48.yaml
+++ b/templates/99_openshift-cluster-api_infra-machineset-TEMPLATE-vmw48.yaml
@@ -50,5 +50,5 @@ spec:
           workspace:
             datacenter: ${DATACENTER}
             datastore: ${DATASTORE}
-            folder: /Datacenter/vm/${CLUSTERID}
+            folder: /${DATACENTER}/vm/${CLUSTERID}
             server: ${VSPHERE_SERVER}
