pushing up network var

--- a/templates/99_openshift-cluster-api_infra-machineset-TEMPLATE-vmw45.yaml
+++ b/templates/99_openshift-cluster-api_infra-machineset-TEMPLATE-vmw45.yaml
@@ -41,7 +41,7 @@ spec:
             creationTimestamp: null
           network:
             devices:
-            - networkName: VM Network
+            - networkName: ${VM_NETWORK}
           numCPUs: 4
           numCoresPerSocket: 2
           template: ${CLUSTERID}-rhcos
