--- a/templates/99_openshift-cluster-api_infra-machineset-TEMPLATE-vmw48.yaml
+++ b/templates/99_openshift-cluster-api_infra-machineset-TEMPLATE-vmw48.yaml
@@ -17,8 +17,8 @@ spec:
       creationTimestamp: null
       labels:
         machine.openshift.io/cluster-api-cluster: ${CLUSTERID}
-        machine.openshift.io/cluster-api-machine-role: <infra> 
-        machine.openshift.io/cluster-api-machine-type: <infra> 
+        machine.openshift.io/cluster-api-machine-role: infra
+        machine.openshift.io/cluster-api-machine-type: infra
         machine.openshift.io/cluster-api-machineset: ${CLUSTERID}-infra 
     spec:
       metadata:
